<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/very_light_blue"
        tools:context=".ui.main.uitest.UiActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_curr_possible_room"
            style="@style/BigBoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="15dp"
            android:text="@string/tv_curr_possible_room"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/tv_curr_possible_room_val"
            style="@style/BigBoldTextWithSkyColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_curr_possible_room"
            app:layout_constraintStart_toEndOf="@+id/tv_curr_possible_room"
            app:layout_constraintTop_toTopOf="@+id/tv_curr_possible_room"
            tools:text="7" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_brief_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_curr_possible_room" />

        <View
            android:id="@+id/view"
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="42dp"
            android:background="@color/deep_blue_sky"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_brief_status" />

        <TextView
            android:id="@+id/tv_reservation_possible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/tv_reservation_possible"
            android:textSize="@dimen/tv_small_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <RadioGroup
            android:id="@+id/rg_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/tv_reservation_possible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_reservation_possible">

            <RadioButton
                android:id="@+id/rb_possible"
                style="@style/SmallTextWithBrownishGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_reservation_possible" />

            <RadioButton
                android:id="@+id/rb_out_meeting"
                style="@style/SmallTextWithBrownishGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_out_meeting" />

            <RadioButton
                android:id="@+id/rb_my_reservation"
                style="@style/SmallTextWithBrownishGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_my_reservation" />

        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_detail_status"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/margin_end"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_option"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>